Fixed position of footer to not to cover content of the page - wrapped footer in container and content wrap plus added css style

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,22 @@
 
-
 footer {
-    position: fixed;
-    background-color: rgba(16, 225, 232, 0.223);
+    position: absolute;
     bottom: 0;
+    width: 100%;
+    padding: 10px;
+    background: #8ef4f693;
+    color: #eee;
+}
+  .footer--pin {
+    position: relative;
     left: 0;
-    right: 0;
-    padding: 8px;
-    text-align: center;
+    bottom: 0;
   }
+  #content-wrap {
+    padding-bottom: 1.5rem;    /* Footer height */
+  }
+  #page-container {
+    position: relative;
+    min-height: 50vh;
+  }
+  
